--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,4 +1,4 @@
 //- scripts etc
-script(src="/js/jquery.min.js").
-script(src="/js/jquery.tipsy.js").
-script(src="/js/app.js").
+script(src="js/jquery.min.js").
+script(src="js/jquery.tipsy.js").
+script(src="js/app.js").
