--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -9,6 +9,5 @@ head
 
   link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
 
-  link(rel="stylesheet", href="/css/app.css")
-  link(rel="stylesheet", href="/css/tipsy.css")
-  //link(rel="stylesheet", href="/css/hint.min.css")
+  link(rel="stylesheet", href="css/app.css")
+  link(rel="stylesheet", href="css/tipsy.css")
